Add cards & mobile adaptation

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-*{
+html{
   background-color: #282c34;
 }
 
@@ -8,10 +8,90 @@
   color: white;
 }
 
+@media(max-width: 600px) {
+  h1 {
+    font-size: 18px;
+  }
+  h2 {
+    font-size: 16px;
+  }
+  h3 {
+    font-size: 12px;
+  }
+  img {
+    width: 64px !important;
+    height: 64px !important;
+  }
+
+  details {
+    width: 100% !important;
+    margin: 0px !important;
+  }
+}
+
 details {
   margin-bottom: 25px;
   margin-top: 25px;
+  margin-left: 25%;
+  width: 50%;
+  background: #282828;
+  box-shadow: 0 .1rem 1rem -.5rem rgba(0,0,0,.4);
+  border-radius: 5px;
+  overflow: hidden;
 }
+
+summary {
+  display: block;
+  background: #333;
+  padding: 1rem 1rem 1rem 2.2rem;
+  position: relative;
+  cursor: pointer;
+}
+
+summary:before {
+  content: '';
+  border-width: .4rem;
+  border-style: solid;
+  border-color: transparent transparent transparent #fff;
+  position: absolute;
+  top: 1.3rem;
+  left: 1rem;
+  transform: rotate(0);
+  transform-origin: .2rem 50%;
+  transition: .25s transform ease;
+}
+
+/* THE MAGIC 🧙‍♀️ */
+details[open] > summary:before {
+  transform: rotate(90deg);
+}
+
+
+details summary::-webkit-details-marker {
+  display:none;
+}
+
+details > ul {
+  padding-bottom: 1rem;
+  margin-bottom: 0;
+}
+
+.divider {
+  display: flex;
+  flex: 1;
+}
+
+.line {
+  align-items: center;
+  margin: 1em -1em;
+}
+
+.glow {
+  background: linear-gradient(to left, blue, hotpink);
+   height: 6px;
+   -webkit-filter: blur(5px);
+   border-radius: 5px;
+ }
 
 .App-logo {
   height: 40vmin;
@@ -46,4 +126,9 @@ details {
   to {
     transform: rotate(360deg);
   }
+}
+
+.abilityDesc {
+  font-family: Helvetica, Monaco, sans-serif;
+  font-size: 16px;
 }
