--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,11 +1,49 @@
 .card {
     justify-content: center;
+}
+
+.common {
     border: 1px solid white;
     border-radius: 25px 0px 25px 0px;
     width: 50%;
     color: white;
     margin-left: 25%;
     margin-bottom: 25px;
+    box-shadow: 0 0 5px 5px #7d7d7d;
+    white-space: pre-wrap
+}
+
+.uncommon {
+    border: 1px solid white;
+    border-radius: 25px 0px 25px 0px;
+    width: 50%;
+    color: white;
+    margin-left: 25%;
+    margin-bottom: 25px;
+    box-shadow: 0 0 5px 5px #ded8d3;
+    white-space: pre-wrap
+}
+
+.rare {
+    border: 1px solid white;
+    border-radius: 25px 0px 25px 0px;
+    width: 50%;
+    color: white;
+    margin-left: 25%;
+    margin-bottom: 25px;
+    box-shadow: 0 0 5px 5px #ffbf80;
+    white-space: pre-wrap
+}
+
+.myth {
+    border: 1px solid white;
+    border-radius: 25px 0px 25px 0px;
+    width: 50%;
+    color: white;
+    margin-left: 25%;
+    margin-bottom: 25px;
+    box-shadow: 0 0 5px 5px rgb(0, 186, 120);
+    white-space: pre-wrap
 }
 
 .img {
