--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -31,7 +31,18 @@
     color: white;
     margin-left: 25%;
     margin-bottom: 25px;
-    box-shadow: 0 0 5px 5px #ffbf80;
+    box-shadow: 0 0 5px 5px #f5ff30;
+    white-space: pre-wrap
+}
+
+.epic {
+    border: 1px solid white;
+    border-radius: 25px 0px 25px 0px;
+    width: 50%;
+    color: white;
+    margin-left: 25%;
+    margin-bottom: 25px;
+    box-shadow: 0 0 5px 5px #ac30ff;
     white-space: pre-wrap
 }
 
