--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -32,7 +32,7 @@
     color: white;
     margin-left: 25%;
     margin-bottom: 25px;
-    box-shadow: 0 0 5px 5px #f5ff30;
+    box-shadow: 0 0 6px 6px #f5ff30;
     white-space: pre-wrap
 }
 
@@ -43,7 +43,7 @@
     color: white;
     margin-left: 25%;
     margin-bottom: 25px;
-    box-shadow: 0 0 5px 5px #ac30ff;
+    box-shadow: 0 0 7px 7px #ac30ff;
     white-space: pre-wrap
 }
 
@@ -54,7 +54,7 @@
     color: white;
     margin-left: 25%;
     margin-bottom: 25px;
-    box-shadow: 0 0 5px 5px rgb(0, 186, 120);
+    box-shadow: 0 0 8px 8px rgb(0, 186, 120);
     white-space: pre-wrap
 }
 
@@ -69,4 +69,16 @@
 
 .cost {
     margin-left: 80%;
+}
+
+
+.soul {
+    border: 1px solid white;
+    border-radius: 25px 0px 25px 0px;
+    width: 50%;
+    color: white;
+    margin-left: 25%;
+    margin-bottom: 25px;
+    box-shadow: 0 0 7px 7px #b9ffed;
+    white-space: pre-wrap
 }
